# needle

./: .gitignore  CMakeLists.txt  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
apps/: mlp_resnet.py
benchmarks/: bench_matmul.py  bench_matmul.txt
python/needle/: __init__.py  autograd.py  optim.py
python/needle/backend/: device.py  ndarray.py  ndarray_backend_numpy.py
python/needle/data/: __init__.py  data_basic.py  data_transforms.py
python/needle/data/datasets/: __init__.py  cifar10_dataset.py  mnist_dataset.py  ndarray_dataset.py  ptb_dataset.py
python/needle/init/: __init__.py  init_basic.py  init_initializers.py
python/needle/nn/: __init__.py  nn_basic.py  nn_conv.py  nn_sequence.py
python/needle/ops/: __init__.py  op.py  ops_logarithmic.py  ops_mathematic.py
src/cpu/: CMakeLists.txt  ndarray_backend_cpu.cc
src/cuda/: CMakeLists.txt
src/metal/: CMakeLists.txt
tests/: test_autograd.py  test_data.py  test_init.py  test_ndarray.py  test_nn_and_optim.py
