[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11>=2.12.0", "setuptools", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "needle-dlsys"
version = "0.0.1"
description = "Needle (Necessary Elements of Deep Learning): a minimalist deep learning library built from scratch."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Dang Truong" }]
license = { text = "MIT" }
keywords = ["deep-learning", "autograd", "ndarray", "mlsys", "pybind11", "scikit-build-core"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "mypy>=1.8",
  "ruff>=0.6.9",
]

[project.urls]
Homepage = "https://minhdang26403.github.io/"
Repository = "https://github.com/minhdang26403/needle"

[tool.scikit-build]
wheel.py-api = "cp312"  # python 3.12 by default; overridden by the build env
cmake.verbose = true
cmake.minimum-version = "3.20"
build-dir = "build/{wheel_tag}"
wheel.packages = ["python/needle"]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["src/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
exclude = ["src/"]
